# epic_poold

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  check_job.hpp  client.cpp  client.hpp  client_pool.hpp  config_json.tmpl  dataset.hpp  encdec.cpp  encdec.h  hashpool.cpp  hashpool.hpp  jconf.cpp  jconf.hpp  jconf_p.hpp  json.h  log.cpp  log.hpp  loglevels.hpp  main.cpp  node.cpp  node.h  pp_hashpool.cpp  pp_hashpool.hpp  rx_hashpool.cpp  rx_hashpool.hpp  server.cpp  server.hpp  socks.h  thdq.hpp  time.hpp  vector32.h  workstruct.hpp
